MAS: Adding RCL API and implementation
Squashed commit of the following:

commit fda333418edf6bfb2c22528219686a9ff6b88ac6
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Wed Apr 29 08:39:18 2020 +0000

    MAS: Added RCL test to suite

commit 4077debc42ca5f2e448047ae9528e7f0169383a9
Merge: 73fad62f6 72e5950dc
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Wed Apr 29 08:33:54 2020 +0000

    Merge remote-tracking branch 'origin/master.mas' into master.mas.rcl

commit 73fad62f6f4789f2298c69907d77b8c97a75f3c5
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Wed Apr 29 08:26:54 2020 +0000

    MAS: RCL documentation added

commit a4f5eeb45ce564332623473c564277949ccedd77
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Mon Apr 27 12:28:55 2020 +0000

    MAS: RCL review updates

commit 3523d19f0cc10a3e009e331234a9b0908d6bfe8e
Merge: 0881933af 67b6c2938
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Fri Apr 24 15:23:28 2020 +0000

    Merge remote-tracking branch 'origin/master.mas' into master.mas.rcl

commit 0881933afb9f37d3ca55a798aeadfa3892f02fa6
Merge: 52456187c 53682d6f9
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Fri Apr 24 14:58:58 2020 +0000

    Merge remote-tracking branch 'origin/master.mas' into master.mas.rcl

commit 52456187c8d05b4c7e6beb7a233632421f4ab2ff
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Fri Apr 24 14:25:00 2020 +0000

    MAS: RCL port forward actions changed

commit a22adf80d16579c915de1b5d6943b1c4251e0ba3
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Thu Apr 23 08:02:19 2020 +0000

    MAS: RCL implementation started

commit c2c86bf85918d8e45a47a8d8039f0695ec03a445
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Mon Apr 20 12:20:47 2020 +0000

    Removed RCL VID index

commit cb32fb0d570d9e78b5ee73e564e5834dcc7030b1
Author: Claus Jensen <claus.jensen@microchip.com>
Date:   Mon Apr 20 11:33:27 2020 +0000

    RCL started

--- a/mesa/docs/l2/l2.adoc
+++ b/mesa/docs/l2/l2.adoc
@@ -304,6 +304,23 @@ be controlled per ring and port. If a port is discarding for a ring instance,
 ingress and egress forwarding will be disabled for all VLANs mapping to the ring
 instance. VLAN ingress filtering must be enabled on ports running ERPS.
 
+== Real-time Control List (RCL)
+
+If the capability `MESA_CAP_L2_RCL` is non-zero, the RCL feature is available.
+This can be used for special processing of Profinet and OPC-UA frames.
+RCL classification can be enabled for a number of VID/PCP values (`mesa_rcl_vid_add()`).
+VID zero is used to enable RCL classification for untagged and priority-tagged frames.
+
+Each Real-time Control Entry (RCE) is identified by a RCE ID (`mesa_rce_id_t`).
+The RCEs are ordered in a list of rules based on the RCE IDs.
+The first matching rule in the RCL determines the action for a received frame.
+When adding a rule, the RCE ID of the rule and the RCE ID of the next rule in
+the list must be specified. A special value `MESA_RCE_ID_LAST` is used to
+specify that the rule must be added at the end of the list.
+Each RCE includes a key structure (`mesa_rce_key_t`) with fields used for
+matching received frames and an action structure (`mesa_rce_action_t`) with the
+resulting forwarding properties.
+
 == API Functions
 `mesa_mac_table_add()` +
 `mesa_mac_table_del()` +
@@ -313,7 +330,7 @@ instance. VLAN ingress filtering must be enabled on ports running ERPS.
 `mesa_mac_table_age_time_set()` +
 `mesa_mac_table_age()` +
 `mesa_mac_table_vlan_age()` +
-`mesa_mac_table_flush()` + )
+`mesa_mac_table_flush()` +
 `mesa_mac_table_port_flush()` +
 `mesa_mac_table_vlan_flush()` +
 `mesa_mac_table_vlan_port_flush()` +
@@ -431,3 +448,8 @@ instance. VLAN ingress filtering must be enabled on ports running ERPS.
 `mesa_erps_vlan_member_set()` +
 `mesa_erps_port_state_get()` +
 `mesa_erps_port_state_set()` +
+`mesa_rcl_vid_add()` +
+`mesa_rcl_vid_del()` +
+`mesa_rce_init()` +
+`mesa_rce_add()` +
+`mesa_rce_del()`
