--- a/mesa/docs/introduction.adoc
+++ b/mesa/docs/introduction.adoc
@@ -6,6 +6,15 @@
 
 = Introduction to MESA
 
+== Terminology
+
+Microchip is aware that some terminology used in this technical document is
+antiquated and inappropriate. As a result of the complex nature of software
+where seemingly simple changes have unpredictable, and often far-reaching
+negative results on the software's functionality (requiring extensive retesting
+and revalidation) we are unable to make the desired changes in all legacy
+systems without compromising our product or our clients' products.
+
 == Introduction
 
 The Microchip Ethernet Switch API (MESA) provides a production quality
