--- a/README.adoc
+++ b/README.adoc
@@ -10,3 +10,12 @@ License information, see LICENSE.
 
 To generate mesa-doc.html (only relevant in non-released version) go to
 `./mesa/doc/scripts` and run `dg.rb`.
+
+== Terminology
+
+Microchip is aware that some terminology used in this project is antiquated and
+inappropriate. As a result of the complex nature of software where seemingly
+simple changes have unpredictable, and often far-reaching negative results on
+the software's functionality (requiring extensive retesting and revalidation) we
+are unable to make the desired changes in all legacy systems without
+compromising our product or our clients' products.
