--- a/mesa/docs/release-notes/mesa-2020.12.adoc
+++ b/mesa/docs/release-notes/mesa-2020.12.adoc
@@ -15,3 +15,10 @@
 === General
 
 This is a bug-fix release with no new features.
+
+==== SparX-5/5i / Priority Flow Control not working
+
+There is a know bug causing PFC not to work for SparX-5/5i. Due to this, the PFC
+feature is not advertised by the capability system.
+
+
