--- a/mesa/docs/release-notes/mesa-2021.06.adoc
+++ b/mesa/docs/release-notes/mesa-2021.06.adoc
@@ -5,9 +5,75 @@
 
 == MESA-2021.06
 
+|===
+|Version:          |MESA-2021.06
+|Previous Version: |MESA-2021.03
+|Date:             |2021-07-09
+|Description:      |Roadmap release
+|===
+
+=== Disclaimers
+
+==== LAN9662 in BETA, and LAN9668 still not supported
+
+This is the first release introducing the two LAN9662 and LAN9668 SKUs. LAN9662
+has gone through limited testing and the support of LAN9662 in this release is
+considered to be in BETA quality. LAN9668 is covered in the implementation, but
+it is not tested and is not considered a supported target in this release.
+
+LAN9662 in this release can be used for early access, to evaluate the features
+and/or start SW integration. It is not suitable for production use.
+
+LAN9668 should not be used in this release.
+
+==== LAN8814 (PHY) in ALFA with limited support
+
+This is the first release which adds MEPA (Microchip Ethernet PHY API) support
+for LAN8814. The support of LAN8814 in this release is considered to be in BETA
+quality. It can be used for early access, to evaluate the features and/or
+start SW integration. It is not suitable for production use.
+
 === General
 
-==== USXGMII mode
+==== New serdes modes
 
-This release introduces USXGMII mode which is a 4x2.5G mode over 10G or 25G serdes.
-This mode supports in-band status (USXGMII code word) as well as out-of-band (from the phy over MDIO).
+This release introduces support of the following new serdes modes:
+
+* `MESA_SERDES_MODE_SXGMII`: 1 x USXGMII in 5G/10G mode */
+* `MESA_SERDES_MODE_USGMII`: 8 x USGMII in 1G mode */
+* `MESA_SERDES_MODE_QXGMII`: 4 x QXGMII in 2G5 mode.  Mode 'R'
+* `MESA_SERDES_MODE_DXGMII_10G`: 2 x DXGMII_10G in 5G mode.  Mode 'U'
+* `MESA_SERDES_MODE_DXGMII_5G`: 2 x DXGMII_5G in 2G5 mode.  Mode 'F'
+
+In the current release, only Sparx5/5i SKUs supports these modes, and they are
+all offered over a 10G or 25G serdes. These modes supports in-band status
+(USXGMII code word) as well as out-of-band (from the phy over MDIO).
+
+==== MRP Support
+
+Media Redundancy Protocol - IEC 62439-2 HW Offload API added.
+
+MRP is a redundancy protocol based on ring topologies. A MRP ring consists of a
+manager (MRM) and a number of clients (MRC). When ring is closed (all links
+working), manager blocks forwarding of frames between the two ring ports. The
+manager sends out a periodic frame through the ring to confirm full
+connectivity. If a link in the ring goes down, the manager will detect this, and
+the ring is considered open. In this case, the manager will enable forwarding of
+frames between the two ring ports, and ask all clients to flush their MAC
+table.  MRP has profiles to support recovery times down to 10ms.
+
+API also supports auto-manager where the nodes automatic determinates who shall
+act as manager, an it supports interconnects where multiple rings are connected.
+
+This features is avialiuable if the `MESA_CAP_MRP` capability is set, in current
+version this will only be the case for LAN966x SKUs.
+
+
+==== RCL Real-Time Control lists
+
+The RCL API is a TCAM based features used to classify packets for processing by
+the RTE (Real-Time-Engine) HW found in the LAN9662 silicon. This feature shall
+be used toghether with the MERA API, and a more detailed description can be
+found in the MERA-Doc.
+
+
