Fixed typos in release note and copied to release-note-disclaimer used by WebStaX when inlining API

--- a/mesa/docs/supported-hw.adoc
+++ b/mesa/docs/supported-hw.adoc
@@ -50,6 +50,7 @@ The following tables lists the supported HW in this release.
 | SparX-5i | VSC7552TSN | SparX-5i-128
 | SparX-5i | VSC7556TSN | SparX-5i-160
 | SparX-5i | VSC7558TSN | SparX-5i-200
+| LAN966x  | LAN9662    | LAN9662
 |===
 
 === Supported PHYs
@@ -87,6 +88,7 @@ The following tables lists the supported HW in this release.
 | 8488     | VSC8488-15
 | Others   | VSC8484
 | Others   | VSC8486
+| LAN8814  | LAN8814
 |===
 
 === Third-Party PHYs
