Pull request #160: master.laguna-10.mrp
Merge in UNGE/sw-mesa from master.laguna-10.mrp to master.laguna-10

Squashed commit of the following:

commit da5fab53c975edc23fbab937cd346ac607d2ca72
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Mon Mar 7 08:38:43 2022 +0100

    Added drawings required for MRP documentation

commit c5457aea668666ffcde327668b74cc990b0bbc53
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Fri Mar 4 15:52:37 2022 +0100

    Updated MRP documentation for MRP version 1 - Laguna

commit e366938f99cb057b680df3f33f6ff157e525396a
Merge: 15eb611ee 6bc438da6
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Fri Mar 4 13:27:58 2022 +0100

    Merge branch 'master.laguna-10.mrp' of ssh://bitbucket.microchip.com/unge/sw-mesa into master.laguna-10.mrp

commit 15eb611ee0f2d61a1a3e9843e2b20742d6afbec7
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Fri Mar 4 13:27:18 2022 +0100

    Added MESA capabillity to different MRP implementations

commit 6bc438da616243512d1f4d5190c41d3b623927f0
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Fri Mar 4 13:21:00 2022 +0100

    MRP for Laguna reviewed - no functional changes

commit c40d5a391fef216447f70564c0df0a6651a48232
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Fri Mar 4 12:01:46 2022 +0100

    Updated Laguna MRP implementation and mrp_all.rb to pass

commit 086f46de7495f7f7c86478191b8a94dd104fdbdb
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Wed Feb 23 18:10:20 2022 +0100

    Corrections to calculate LOC base tick

commit 4ca2a00d17ca62e0e112551346b996cea3b84814
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Tue Feb 22 15:03:33 2022 +0100

    Changed FA MRP to LAN969X MRP

commit 5527646a6588e8476be0768a752dc57423e76c75
Author: Henrik Bjoernlund <henrik.bjoernlund@microchip.com>
Date:   Tue Feb 22 14:38:48 2022 +0100

    Updated vtss_fa_mrp.c to correct

--- a/mesa/docs/mrp/mrp.adoc
+++ b/mesa/docs/mrp/mrp.adoc
@@ -29,8 +29,29 @@ This is according to IEC 62439-2 +
 .The handling has impact on the frame on egress:
 * Updating fields in transmitted MRP_Test and MRP_InTest PDUs
 
-There are MRP resources per switch port that enable configuration of MRPs
+There are MRP HW resources allocated per switch port that support adding and configuration of MRP instances
 that can have two ring ports and one interconnected port.
+
+=== MRP Detailed.
+The MRP HW resources are hit by MRP frames differently depending of the MRP version.
+The following drawing outline the details.
+
+If MESA capability `MESA_CAP_MRP_V0` is not zero the following applies::
+The MRP resources are hit automatically, no additional configuration is required.
+
+--
+.Frame flow
+image:./v0-mrp-flow.svg[]
+--
+
+If MESA capability `MESA_CAP_MRP_V1` is not zero the following applies::
+The MRP resourced are implemented by VOEs in HW. In order to hit the MRP-VOE the ingress
+and injected MRP frames must be directed by additional configuration.
+
+--
+.Frame flow
+image:./v1-mrp-flow.svg[]
+--
 
 === Adding a MRP.
 `mesa_mrp_add()` +
@@ -43,6 +64,32 @@ Handling of MRP PDUs will be depending on the given ring roles according to IEC 
 There can only be one MRP instance on a port. +
  +
 A MRP instance can be deleted.
+
+=== Getting allocated MRP-VOE indices.
+If MESA capability `MESA_CAP_MRP_V2` is not zero the following applies::
+`mesa_mrp_voe_index_get()` +
++
+When a MRP instance has been added, calling this function will return (`mesa_mrp_voe_idx_t`) the allocated VOE indices to
+be used when doing additional configuration required for MRP frames to hit MRP-VOE.
+
+==== Ingress Port VCE and IFLOW.
+If MESA capability `MESA_CAP_MRP_V2` is not zero the following applies::
+`mesa_vce_add` +
+`mesa_iflow_alloc` +
++
+On P-Port + S-Port + I-Port one VCE entry is configured (`mesa_vce_t`) with key matching on MRP with no TAG. Action is to mark as MRP and give IFLOW. +
+The IFLOW is configured (`mesa_iflow_conf_t`) to point to the allocated MRP-VOE that will be the MRP frame handling VOE. +
+The IFLOW is also used as the Egress IFLOW.
+
+==== Egress Port TCE and EFLOW.
+If MESA capability `MESA_CAP_MRP_V2` is not zero the following applies::
+`mesa_tce_add` +
+`mesa_eflow_alloc` +
++
+On P-Port + S-Port + I-Port one TCE entry is configured (`mesa_tce_t`) with key matching on specific IFLOW. Action is to give EFLOW. +
+The EFLOW is configured (`mesa_eflow_conf_t`) to point to the allocated MRP-VOE that will be the MRP frame handling VOE +
+The TCE key IFLOW is used when OAM frames are injected. +
+The IFLOW is the same as the one used as Ingress IFLOW.
 
 === Changing MRP role
 `mesa_mrp_ring_role_set()` +
